Revision history for Perl module Pod::WikiDoc

0.10 in progress
    - basic wikidoc format section extraction
    - basic block formatting (header, paragraph, verbatim, lists)
    - basic inline formattting (bold, italic, link, code)
    - link formatting with or without link text
    - special symbols "<>|/" automatically escaped in generated Pod
    - format nesting